--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -6,12 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>注册</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+
     <script src='/node_modules/jquery/dist/jquery.min.js'></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 
 </head>
+<style>
+    #form {
+      width: 400px;
+      margin: 0 auto;
+      margin-top: 100px;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    input[type='submit'] {
+      width: 100%;
+    }
+  </style>
 <body>
-    <form>
+    <form  id="form">
+        <h1>登录页面</h1>
     <div class="form-group">
       <input type="text" class="form-control" id="username" name='username' placeholder="请输入用户名" required>
     </div>
@@ -24,7 +42,7 @@
       </div>
 
       <div class="form-group">
-          <input type="submit" class="btn btn-primary btn-lg" id="password" value="登陆">
+          <input type="submit" class="btn btn-primary btn-lg"  value="登陆">
       </div>
                
     </form>
