--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -7,10 +7,27 @@
     <title>注册</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src='/node_modules/jquery/dist/jquery.min.js'></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </head>
+<style>
+    #form {
+      width: 400px;
+      margin: 0 auto;
+      margin-top: 100px;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    input[type='submit'] {
+      width: 100%;
+    }
+  </style>
 <body>
-    <form>
+    <form  id="form">
+        <h1>注册页面</h1>
       <div class="form-group">
         <input type="text" class="form-control" id="username" name='username' placeholder="用户名" required>
       </div>
@@ -18,11 +35,11 @@
         <input type="password" class="form-control" id="password" name="password" placeholder="密码" required>
       </div>
       <div class="form-group">
-          <input type="password" class="form-control" id="password" name="password" placeholder="昵称" required>
+          <input type="password" class="form-control" id="nickname" name="nickname" placeholder="昵称" required>
         </div>
  
         <div class="form-group">
-            <input type="submit" class="btn btn-primary btn-lg" id="password" value="注册新用户">
+            <input type="submit" class="btn btn-primary btn-lg"  value="注册新用户">
         </div>
                
     </form>
