--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>注册</title>
+    <title>登陆我的blog</title>
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <script src='/node_modules/jquery/dist/jquery.min.js'></script>
@@ -55,10 +55,12 @@
         data:$('form').serialize(),
         success:(res)=>{
           alert(res.msg)
-          location.href='/index'
+          location.href='/index.exj'
         },
         error:(res)=>{
-          alert('错误')
+          console.log(res)
+          alert(res.responseJSON.msg)
+          $('#form input').val('')
         }
       
       })
