--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -55,7 +55,7 @@
         data:$('form').serialize(),
         success:(res)=>{
           alert(res.msg)
-          location.href='/index.exj'
+          location.href='/'
         },
         error:(res)=>{
           console.log(res)
