--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,8 +28,8 @@
             <ul class="nav navbar-nav navbar-right ">
              
              <div class="navbar-form nav navbar-nav navbar-right">
-              <button class="ui primary btn btn-success">注册 </button>
-              <button class="ui btn btn-primary">登陆 </button>
+              <a class="ui primary btn btn-success" href="/register">注册 </a>
+              <a class="ui btn btn-primary" href="/login">登陆 </a>
              </div>
              <div class="navbar-form nav navbar-nav navbar-right">
                 <button class="btn btn-warning">欢迎XXX登陆 </button>
