--- a/views/article/add.ejs
+++ b/views/article/add.ejs
@@ -1,12 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>文字添加页</title>
-</head>
-<body>
-    
-</body>
-</html>
+<%- include('../common/header.ejs') %>
+
+<link rel="stylesheet" href="/node_modules/mditor/dist/css/mditor.min.css">
+
+<script src="/node_modules/mditor/dist/js/mditor.min.js"></script>
+
+<div class="container">
+  <h1>发表文章页</h1>
+  <hr>
+  <form id="form">
+    <div class="form-group">
+      <label>文章标题：</label>
+      <input type="text" name="title" class="form-control" required>
+    </div>
+
+    <div class="form-group">
+      <label>文章内容：</label>
+      <textarea name="content" class="form-control" id="editor"></textarea>
+    </div>
+
+    <div class="form-group">
+      <input type="submit" value="发表文章" class="btn btn-primary">
+    </div>
+  </form>
+</div>
+
+<script>
+
+  $(function () {
+    var mditor = Mditor.fromTextarea(document.getElementById('editor'));
+
+    //获取或设置编辑器的值
+    mditor.on('ready', function () {
+      console.log(mditor.value);
+      // mditor.value = '** hello **';
+      // mditor.fullscreen = true
+    });
+  })
+
+</script>
+
+<%- include('../common/footer.ejs') %>
