--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -58,7 +58,7 @@
           location.href='/'
         },
         error:(res)=>{
-          console.log(res)
+          //console.log(res)
           alert(res.responseJSON.msg)
           $('#form input').val('')
         }
